Fixed footer flex direction on small screens

--- a/MediaNowNet.UI/MediaNowNet/src/app/core/components/footer/footer.component.scss
+++ b/MediaNowNet.UI/MediaNowNet/src/app/core/components/footer/footer.component.scss
@@ -26,3 +26,12 @@
     }
   }
 }
+
+@media only screen and (max-width: 640px) {
+  .footer-container {
+    .footer-menu {
+      flex-direction: column;
+      padding-top: 10px;
+    }
+  }
+}
